tests/miniJava/pos/000763_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) { } else System.out.println ( { } ) ; } }
