tests/miniJava/neg/006784_mutation.MiniJava
class java String { public static void Main ( String [ ] java ) { { } } }
